# frontier-game

./: .env.example  .gitignore  CLAUDE.md  DISPATCH.md  HANDOFF.backup.md  HANDOFF.md  HANDOFF_BALANCE_RESEARCH.md  HANDOFF_BALANCE_TUNING.md  LORE.md  ROADMAP.md  audit-findings-1780734139901.md  audit-findings-1781058861372.md  audit-findings-1781136849271.md  audit-findings-1781166355013.md  audit-findings-1781342041734.md  audit-findings-1781597819370.md  audit-findings-1781684057213.md  audit-findings-1781770496796.md  audit-findings-1781925312579.md  audit-findings-1781956489268.md  audit-findings-1781969775246.md  audit-findings-1781997219183.md  audit-findings-1782028474938.md  audit-findings-1782048904959.md  audit-findings-1782054929016.md  audit-findings-1782059709860.md  audit-findings-1782062057583.md  audit-findings-1782113674266.md  audit-findings-1782123317644.md  audit-findings-1782127003503.md  audit-findings-1782129309844.md  audit-findings-1782179624663.md  audit-findings-1782182080592.md  audit-findings-1782184700146.md  audit-findings-1782188088415.md  audit-findings-1782228916871.md  audit-findings-1782231285024.md  audit-findings-1782238486139.md  audit-findings-1782244478811.md  audit-findings-1782251613314.md  (+333 more)
ai/: PLAYING.md  STATE.md  dispatch-docs-gen-1780086025907.md  dispatch-docs-gen-1780087999292.md  dispatch-docs-gen-1780088280540.md  dispatch-docs-gen-1780088754013.md  dispatch-docs-gen-1780091849690.md  dispatch-docs-gen-1780109859997.md  (+4 more)
api/: narrator.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+146 files in other folders)
