[package]
name = "frontier"
version = "1.0.0"
description = "Frontier — Narrative survival on the 1866 Goodnight-Loving Trail"
authors = ["Perry Martin"]
license = "MIT"
repository = "https://github.com/pmartin1915/frontier"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
